refactor(scheduling): async build task executor and scheduling improvements